# tkm32f499_gcc_demo

./: .gitignore  README.md
TK499_GPIO/: CMakeLists.txt
TK499_GPIO/CMSIS_and_startup/: TKM32F499_FLASH.ld  startup_tkm32f499.s  sys.c  sys.h  tk499.h
TK499_GPIO/Hal_lib/inc/: HAL_adc.h  HAL_can.h  HAL_conf.h  HAL_device.h  HAL_dma.h  HAL_exti.h  HAL_flash.h  HAL_gpio.h  HAL_i2c.h  HAL_iwdg.h  HAL_misc.h  HAL_pwr.h  HAL_rcc.h  HAL_spi.h  HAL_syscfg.h  HAL_tim.h  HAL_uart.h  HAL_wwdg.h
TK499_GPIO/Hal_lib/src/: HAL_dma.c  HAL_dma_bak.ccccc  HAL_exti.c  HAL_gpio.c  HAL_i2c.c  HAL_iwdg.cccc  HAL_misc.c  HAL_pwr.c  HAL_rcc.c  HAL_spi.c  HAL_syscfg.c  HAL_tim.c  HAL_uart.c  HAL_wwdg.cccc
TK499_GPIO/project/: main.c
